Fix background not showing up on some devices.

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+html {
+	height: 100%;
+}
 body {
 	font: 15px/23px 'Ubuntu', arial, serif;
 	background: #001932 url(../graphics/splash.jpg) no-repeat center center fixed;
 	color: #ccc;
+	height: 100%;
 }
 h1 {
 	font-size: 25px;
